// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly sumary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $4,545.64
  </h1>
</div>
`;

exports[`should render correctly sumary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $15.00
  </h1>
</div>
`;
